[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlfrx"
version = "0.1.0"
description = "Python library for VLF radio signal processing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darío Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
    "pip-api",
    "scipy-stubs",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["vlfrx[dev,test,lint]"]

[project.scripts]
vlfrx = "vlfrx.cli:main"

[project.urls]
Homepage = "https://github.com/daedalus/vlfrx-tools-py"
Repository = "https://github.com/daedalus/vlfrx-tools-py"
Issues = "https://github.com/daedalus/vlfrx-tools-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vlfrx"]

[tool.hatch.build.targets.sdist]
include = ["src/vlfrx"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=79"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]